Fix bug #81926.  Crashes in factory constructor when starting a drag on linux.  r=naving, sr=sspitzer